--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "esbuild": "^0.16.12",
     "mocha": "^10.2.0"
   },
-  "repository": "git+https://github.com/5102a/binary2ascii.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/5102a/binary2ascii.git"
+  }
 }
